# temporal-orchestration

./: .env.example  .gitignore  .railwayignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: tests.yml
docs/: architecture.md  integration-plan.md
railway/: README.md
railway/temporal-server/: Dockerfile
railway/temporal-ui/: Dockerfile
scripts/: dev_local.ps1  run_api.ps1  run_tests.ps1  run_worker.ps1
src/dsg_temporal/: __init__.py  __main__.py  api.py  dev_local.py  ids.py  railway_start.py  schedule.py  schemas.py  settings.py  version.py  worker.py
src/dsg_temporal/activities/: __init__.py  http_client.py  remarketing.py  whatsapp.py
src/dsg_temporal/workflows/: __init__.py  remarketing.py  whatsapp.py
tests/: conftest.py  test_activities_live.py  test_activities_remarketing.py  test_ids.py  test_live_api.py  test_schedule.py  test_settings.py  test_temporal_integration.py  test_whatsapp_hardening.py  test_whatsapp_quiet_hours.py  test_workflow_remarketing.py
