[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalstoregames-temporal"
version = "0.1.0"
description = "Temporal orchestrator for Digital Store Games workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "temporalio>=1.17,<2.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "requests>=2.32,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: pure-function unit tests (no infra)",
  "integration: tests that start a local Temporal test server",
  "live: tests that call real external services (backend/email/whatsapp)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
